# hello_rusoto

./: Cargo.toml
src/: main.rs
