[package]
name = "hello_rusoto"
version = "0.1.0"
authors = ["Matt Roberts <mattroberts297@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DynamoDB
tokio = "1" # actix-web 3 looks to need 0.3, but rusoto expects 1
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
serde_dynamodb = "0.7.0"
